# sielo-legacy

./: .appveyor  .gitignore  .gitmodules  CMakeLists.txt  ColorZilla.qrc  LICENSE  Main.cpp  README.md  SWebView.h  SieloBrowser.pro  SieloNavigateur.pro  SieloNavigateurV3-WebEngine.aps  SieloNavigateurV3-WebEngine.pro  TODO.md  appveyor.yml  changelog-1.17.txt  changelog-maynapeh.txt  data.qrc  firefox-like-dark.qrc  firefox-like-light.qrc  ic_sielo.rc  icon.icns  icons.qrc  maynapeh-changelog.txt  plugins.qrc  releasesnsettings.ini  resource.h  round-theme.qrc  sielo-default.qrc  sielo-flat.qrc  user-config.cmake
Core/: Application.cpp  Application.cpp~RF9025b21b.TMP  Application.hpp  BrowserWindow.cpp  BrowserWindow.hpp  CMakeLists.txt  Core.pro  titlebarstyling.mm
Core/AdBlock/: CustomList.cpp  CustomList.hpp  Manager.cpp  Manager.hpp  Matcher.cpp  Matcher.hpp  Rule.cpp  Rule.hpp  SearchTree.cpp  SearchTree.hpp  Subscription.cpp  Subscription.hpp  SubscriptionDialog.cpp  SubscriptionDialog.hpp  TreeWidget.cpp  TreeWidget.hpp  UrlInterceptor.cpp  UrlInterceptor.hpp
Core/AutoFill/: PasswordManager.cpp  PasswordManager.hpp
Core/Bookmarks/: AddBookmarkDialog.cpp  AddBookmarkDialog.hpp  AddBookmarkProxyModel.cpp  AddBookmarkProxyModel.hpp  BookmarkItem.cpp  BookmarkItem.hpp  BookmarkManager.cpp  BookmarkManager.hpp  BookmarkNode.cpp  BookmarkNode.hpp  Bookmarks.cpp  Bookmarks.hpp  BookmarksCommands.cpp  BookmarksCommands.hpp  BookmarksDialog.cpp  BookmarksDialog.hpp  BookmarksFilterModel.cpp  BookmarksFilterModel.hpp  BookmarksFoldersButton.cpp  BookmarksFoldersButton.hpp  BookmarksFoldersMenu.cpp  BookmarksFoldersMenu.hpp  BookmarksItemDelegate.cpp  BookmarksItemDelegate.hpp  BookmarksManager.cpp  BookmarksManager.hpp  BookmarksMenu.cpp  BookmarksMenu.hpp  BookmarksModel.cpp  BookmarksModel.hpp  BookmarksToolBar.cpp  BookmarksToolBar.hpp  BookmarksToolbar.cpp  BookmarksToolbar.hpp  BookmarksToolbarButton.cpp  BookmarksToolbarButton.hpp  BookmarksTreeView.cpp  BookmarksTreeView.hpp  BookmarksUtils.cpp  BookmarksUtils.hpp  (+4 more)
Core/Cookies/: CookieJar.cpp  CookieJar.hpp  CookieManager.cpp  CookieManager.hpp
Core/Core_autogen/: mocs_compilation.cpp
Core/Database/: DatabaseType.hpp  ProfileManager.cpp  ProfileManager.hpp  SqlDatabase.cpp  SqlDatabase.hpp
Core/Download/: DownloadManager.cpp  DownloadManager.hpp  DownloadModel.cpp  DownloadModel.hpp  DownloadWidget.cpp  DownloadWidget.hpp
Core/History/: History.cpp  History.hpp  HistoryDialog.cpp  HistoryDialog.hpp  HistoryFilterModel.cpp  HistoryFilterModel.hpp  HistoryItem.cpp  HistoryItem.hpp  HistoryManager.cpp  HistoryManager.hpp  HistoryMenu.cpp  HistoryMenu.hpp  HistoryMenuModel.cpp  HistoryMenuModel.hpp  HistoryModel.cpp  HistoryModel.hpp  HistoryTreeModel.cpp  HistoryTreeModel.hpp  HistoryTreeView.cpp  HistoryTreeView.hpp  TreeProxyModel.cpp
Core/MaquetteGrid/: MaquetteGrid.cpp  MaquetteGrid.hpp  MaquetteGridItem.cpp  MaquetteGridItem.hpp  MaquetteGridManager.cpp  MaquetteGridManager.cpp~RF3ebea22.TMP  MaquetteGridManager.hpp  MaquetteGridMenu.cpp  MaquetteGridMenu.hpp  MaquetteGridTabsList.cpp  MaquetteGridTabsList.hpp
Core/Mockup/: MockupItem.cpp  MockupItem.hpp  Mockups.cpp  Mockups.hpp  MockupsManager.cpp  MockupsManager.hpp  MockupsMenu.cpp  MockupsMenu.hpp  MockupsTabsList.cpp  MockupsTabsList.hpp
Core/Network/: BaseUrlInterceptor.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkUrlInterceptor.cpp  NetworkUrlInterceptor.hpp
Core/Password/: DatabaseEncryptedPasswordBackend.cpp  DatabaseEncryptedPasswordBackend.hpp  DatabasePasswordBackend.cpp  DatabasePasswordBackend.hpp  MasterPasswordDialog.cpp  MasterPasswordDialog.hpp  PasswordBackend.cpp  PasswordBackend.hpp  PasswordManager.cpp  PasswordManager.hpp
Core/Plugins/: PluginInterface.hpp  PluginListDelegate.cpp  PluginListDelegate.hpp  PluginProxy.cpp  PluginProxy.hpp  Plugins.cpp  Plugins.hpp  PluginsManager.cpp  PluginsManager.hpp
Core/Utils/: AddressCompleter.cpp  AddressCompleter.hpp  AddressCompletionModel.cpp  AddressCompletionModel.hpp  AesInterface.cpp  AesInterface.hpp  AutoFillJsObject.cpp  AutoFillJsObject.hpp  AutoSaver.cpp  AutoSaver.hpp  CertificateInformation.cpp  CertificateInformation.hpp  CheckBoxDialog.cpp  CheckBoxDialog.hpp  CloseTabsManager.cpp  CloseTabsManager.hpp  ClosedTabsManager.cpp  ClosedTabsManager.hpp  CommandLineOption.cpp  CommandLineOption.hpp  DataPaths.cpp  DataPaths.hpp  DelayedFileWatcher.cpp  DelayedFileWatcher.hpp  EllipseLabel.cpp  EllipseLabel.hpp  ExternalJsObject.cpp  ExternalJsObject.hpp  FloatingButton.cpp  FloatingButton.hpp  HorizontalListWidget.cpp  IconProvider.cpp  IconProvider.hpp  RecoveryJsObject.cpp  RecoveryJsObject.hpp  RegExp.cpp  RegExp.hpp  RestoreManager.cpp  RestoreManager.hpp  Settings.cpp  (+13 more)
Core/View/: TableView.cpp  TableView.hpp  TreeView.cpp  TreeView.hpp
Core/Web/: LoadRequest.hpp  Scripts.hpp  WebHitTestResult.cpp  WebHitTestResult.hpp  WebInspector.cpp  WebInspector.hpp  WebPage.cpp  WebPage.hpp  WebView.cpp  WebView.hpp
Core/Widgets/: AboutDialog.cpp  AboutDialog.hpp  AddressBar.cpp  AddressBar.hpp  AddressBarPopup.cpp  AddressBarPopup.hpp  CertificateInformation.cpp  CertificateInformation.hpp  CheckBoxDialog.cpp  CheckBoxDialog.hpp  ClearButton.cpp  ClearButton.hpp  EllipseLabel.cpp  EllipseLabel.hpp  ExLineEdit.cpp  ExLineEdit.hpp  FloatingButton.cpp  FloatingButton.hpp  HelpUsDialog.cpp  HelpUsDialog.hpp  HorizontalListWidget.cpp  HorizontalListWidget.hpp  LineEdit.cpp  LineEdit.hpp  LocationBarPopup.cpp  LocationBarPopup.hpp  MainMenu.cpp  MainMenu.hpp  ModelMenu.cpp  ModelMenu.hpp  NavigationBar.cpp  NavigationBar.hpp  NavigationControlDialog.cpp  NavigationControlDialog.hpp  PartnerDialog.cpp  PartnerDialog.hpp  SearchButton.cpp  SearchButton.hpp  SearchLineEdit.cpp  SearchLineEdit.hpp  (+18 more)
Display/: CMakeLists.txt
Display/History/: HistoryDialog.cpp
Display/View/: TreeView.cpp
SNCompiler/: Application.cpp  Application.hpp  CMakeLists.txt  Main.cpp
WebEngines/QWebEngine/: CMakeLists.txt  ContextMenuData.cpp  ContextMenuData.hpp  CookieStore.cpp  CookieStore.hpp  (+19 more)
(+513 files in other folders)
